// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Person model helpers creates an author with specified data 1`] = `
Person {
  "_id": "unique_id",
  "affiliations": Array [],
  "bio": Object {
    "doc": Object {
      "content": Array [
        Object {
          "type": "paragraph",
        },
      ],
      "type": "doc",
    },
    "selection": Object {
      "anchor": 1,
      "head": 1,
      "type": "text",
    },
  },
  "competingInterestStatement": undefined,
  "email": undefined,
  "firstName": "Test",
  "hasCompetingInterest": undefined,
  "isAuthenticated": undefined,
  "isCorrespondingAuthor": undefined,
  "lastName": "Testerson",
  "orcid": undefined,
  "suffix": undefined,
}
`;

exports[`Person model helpers creates an author with specified data and ID 1`] = `
Person {
  "_id": "unique_id",
  "affiliations": Array [],
  "bio": Object {
    "doc": Object {
      "content": Array [
        Object {
          "type": "paragraph",
        },
      ],
      "type": "doc",
    },
    "selection": Object {
      "anchor": 1,
      "head": 1,
      "type": "text",
    },
  },
  "competingInterestStatement": undefined,
  "email": undefined,
  "firstName": "Test",
  "hasCompetingInterest": undefined,
  "isAuthenticated": undefined,
  "isCorrespondingAuthor": undefined,
  "lastName": "Testerson",
  "orcid": undefined,
  "suffix": undefined,
}
`;

exports[`Person model helpers creates authors state 1`] = `
Array [
  Person {
    "_id": "unique_id",
    "affiliations": Array [],
    "bio": Object {
      "doc": Object {
        "content": Array [
          Object {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "selection": Object {
        "anchor": 1,
        "head": 1,
        "type": "text",
      },
    },
    "competingInterestStatement": "",
    "email": "f.atherden@elifesciences.org",
    "firstName": "Fred",
    "hasCompetingInterest": false,
    "isAuthenticated": true,
    "isCorrespondingAuthor": false,
    "lastName": "Atherden",
    "orcid": "0000-0002-6048-1470",
    "suffix": "Capt.",
  },
]
`;
